--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <br><br>
       <div id="result"></div>
       <br><br>
-      <button onclick="take_snapshot();" class = "btn btn-info">Capture Image</button>
+      <button onclick="start1();" class = "btn btn-info">Capture Image</button>
       <br><br>
       <button onclick = "check();" class="btn btn-success">Identify Image</button>
       <br><br>
